# artchitect

./: .gitignore  README.md  docker-compose.yaml
.github/: dependabot.yml
.github/workflows/: archivel-quality.yml  archivel-tests.yml  build-up-archivel.yaml  build-up.yaml  build-up.yml  buildup.yml  codeql.yml  dependency-review.yml  scorecards.yml
backend/javascript/balancer/: .env.example  .eslintrc.json  .gitignore  package-lock.json  package.json
backend/javascript/watchful/: .env.example  .gitignore  package-lock.json  package.json  tsconfig.json
backend/php/laravel/: .env.example  .env.testing.example  .gitignore  README.md  composer.json  phpcs.xml  phpstan.neon.dist
backend/rust/balancer/: .gitignore  Cargo.toml
backend/rust/balancer/.docker/: Dockerfile
backend/rust/balancer/src/: main.rs
backend/typescript/mailman/: .env.example  .eslintrc.json  package-lock.json  package.json  tsconfig.json
backend/typescript/watchful/: package-lock.json  package.json
frontend/archifront/authentication/: .env.local.example  next.config.js  package-lock.json  package.json
frontend/archifront/homepage/: .env.local.example  .gitignore  next.config.js  (+3 more)
kong/: .env.example  .gitignore
kong/postgres/: .env.example  Dockerfile  docker-entrypoint.sh  init.sql
nginx/: Dockerfile  fpm-template.conf
nginx/archifront/: Dockerfile  archifront.conf  entrypoint.sh
nginx/archivel/: Dockerfile  laravel.conf  nginx.conf
nginx/balancer/: Dockerfile  balancer.conf  entrypoint.sh  nginx.conf
nginx/laravel/: Dockerfile  entrypoint.sh  laravel.conf  nginx.conf
(+160 files in other folders)
