[package]
name = "balancer-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4"
actix-web = "4.1.0"
actix-rt = "2.0.2"
dotenv = "0.15.0"
serde = { version = "1.0.144", features = ["derive"] }
